fixed overflowing text in posts

--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -42,6 +42,11 @@
   font-size: inherit;
 }
 
+.post-container p {
+  word-wrap: break-word;
+  overflow: hidden;
+}
+
 .post-container .bottom a {
   padding: 10px;
   border-radius: 10px;
